--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/search_repository_fragment">
         <action
             android:id="@+id/action_repositoriesFragment_to_repositoryFragment"
-            app:destination="@id/twoFragment" />
+            app:destination="@id/RepositoryDetailFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/twoFragment"
-        android:name="jp.co.yumemi.android.code_check.TwoFragment"
+        android:id="@+id/RepositoryDetailFragment"
+        android:name="jp.co.yumemi.android.code_check.RepositoryDetailFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_two">
+        tools:layout="@layout/repository_detail_fragment">
         <argument
             android:name="item"
             app:argType="jp.co.yumemi.android.code_check.item" />
