--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/selectableItemBackground">
 
     <TextView
@@ -13,6 +14,7 @@
         android:layout_marginVertical="8dp"
         android:textColor="@color/black"
         android:textSize="12sp"
+        tools:text="JetBrains/kotlin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
