--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/SearchRepositoryFragment"
-        android:name="jp.co.yumemi.android.code_check.SearchRepositoryFragment"
+        android:name="jp.co.yumemi.android.code_check.ui.search.SearchRepositoryFragment"
         android:label="@string/app_name"
         tools:layout="@layout/search_repository_fragment">
         <action
@@ -17,12 +17,12 @@
 
     <fragment
         android:id="@+id/RepositoryDetailFragment"
-        android:name="jp.co.yumemi.android.code_check.RepositoryDetailFragment"
+        android:name="jp.co.yumemi.android.code_check.ui.detail.RepositoryDetailFragment"
         android:label="@string/app_name"
         tools:layout="@layout/repository_detail_fragment">
         <argument
             android:name="item"
-            app:argType="jp.co.yumemi.android.code_check.RepositoryInfo" />
+            app:argType="jp.co.yumemi.android.code_check.model.RepositoryInfo" />
     </fragment>
 
 </navigation>
